# OSINT_recon

./: README.md  pyproject.toml  requirements.txt
osint_recon/: __main__.py
osint_recon/core/: target.py
osint_recon/export/: report.py
osint_recon/modules/: crawl.py  headers.py  org_intel.py  ports_traceroute.py  ssl_cert.py  subdomains.py  tech_stack.py  wayback_dirs.py  whois_dns.py
